--- a/Projet/src/main/webapp/artists.xhtml
+++ b/Projet/src/main/webapp/artists.xhtml
@@ -71,7 +71,7 @@
 
 				</table>
 				<h:commandLink action="#{artistManagedBean.addArtist()}"
-					styleClass="btn btn-success center-block">
+					styleClass="btn btn-success center-block" onchange="submit();">
 					<span class="glyphicon glyphicon-plus"></span>
 				</h:commandLink>
 			</h:form>
