--- a/Projet/src/main/webapp/welcome.xhtml
+++ b/Projet/src/main/webapp/welcome.xhtml
@@ -21,11 +21,19 @@
 		</div>
 		<br></br>
 		<h:form>
+			
 			<h:commandLink action="lookArtist">
 				<button type="button" class="btn btn-success text-center center-block">
 					<h:outputText value="Consult my artists" />
 				</button>
 			</h:commandLink>
+			
+			<h:commandLink action="lookTypes">
+				<button type="button" class="btn btn-success text-center center-block">
+					<h:outputText value="Music types (bouton d'accès provisoire)" />
+				</button>
+			</h:commandLink>
+			
 		</h:form>
 	</ui:define>
 </ui:composition>
