--- a/Projet/src/main/webapp/welcome.xhtml
+++ b/Projet/src/main/webapp/welcome.xhtml
@@ -34,6 +34,12 @@
 				</button>
 			</h:commandLink>
 			
+			<h:commandLink action="lookAbout">
+				<button type="button" class="btn btn-success text-center center-block">
+					<h:outputText value="About us (bouton d'accès provisoire)" />
+				</button>
+			</h:commandLink>
+			
 		</h:form>
 	</ui:define>
 </ui:composition>
