Encore un commit
Gestion des messages d'erreurs (sécurité)

--- a/Projet/src/main/webapp/albums.xhtml
+++ b/Projet/src/main/webapp/albums.xhtml
@@ -127,6 +127,13 @@
 
 				</h:form>
 			</div>
+			
+			<div class="col-sm-10 text-danger bg-danger" >
+				<h:outputText value="#{typeManagedBean.permission}"></h:outputText>
+			</div>
+			<div class="col-sm-10 text-danger bg-danger" >
+				<h:outputText value="#{albumManagedBean.permission}"></h:outputText>
+			</div>
 		</div>
 
 		<br />
