--- a/Projet/src/main/webapp/artists.xhtml
+++ b/Projet/src/main/webapp/artists.xhtml
@@ -92,10 +92,12 @@
 
 				</h:form>
 			</div>
+			<div class="col-sm-8 text-danger bg-danger" >
+				<h:outputText value="#{artistManagedBean.permission}"></h:outputText>
+			</div>
 		</div>
 
 		<br />
-		<h:outputText value="#{artistManagedBean.permission}"></h:outputText>
 		<br />
 		<br />
 
