--- a/Projet/src/main/webapp/songs.xhtml
+++ b/Projet/src/main/webapp/songs.xhtml
@@ -76,7 +76,14 @@
 
 				</h:form>
 			</div>
+			<div class="col-sm-8 text-danger bg-danger" >
+				<h:outputText value="#{songManagedBean.permission}"></h:outputText>	
+			</div>
 		</div>
+		
+		<br />
+		<br />
+		<br />
 		<br />
 		<br />
 		<br />
