--- a/Projet/src/main/webapp/types.xhtml
+++ b/Projet/src/main/webapp/types.xhtml
@@ -61,8 +61,14 @@
 
 				</h:form>
 			</div>
+			<div class="col-sm-8 text-danger bg-danger" >
+				<h:outputText value="#{typeManagedBean.permission}"></h:outputText>
+			</div>
 		</div>
 
+		<br />
+		<br />
+		<br />
 		<br />
 		<br />
 		<br />
