--- a/Projet/src/main/webapp/songs.xhtml
+++ b/Projet/src/main/webapp/songs.xhtml
@@ -42,7 +42,7 @@
 
 					<h:column>
 						<f:facet name="header"></f:facet>
-						<h:commandLink action="#{managerManagedBean.deleteManager(s.id)}"
+						<h:commandLink action="#{songManagedBean.deleteSong(so.id)}"
 							styleClass="btn btn-danger">
 							<span class="glyphicon glyphicon-remove"></span>
 						</h:commandLink>
